--- a/.sample.env
+++ b/.sample.env
@@ -1,13 +1,17 @@
-# Deployment used by `npx convex dev`
-CONVEX_DEPLOYMENT=  # team: , project:
+# # Deployment used by `npx convex dev`
+# CONVEX_DEPLOYMENT=dev: # team: , project: 
+
+CONVEX_DEPLOY_KEY=prod:
+
+CONVEX_DEPLOYMENT=prod:
 
 NEXT_PUBLIC_CONVEX_URL=
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 
-NEXT_PUBLIC_CLERK_SIGN_IN_URL = /sign-in
-NEXT_PUBLIC_CLERK_SIGN_UP_URL = /sign-up
+NEXT_PUBLIC_CLERK_SIGN_IN_URL =/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL =/sign-up
 
 NEXT_PUBLIC_CLERK_FRONTEND_API_URL=
 
