--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.25.4",
+    "@clerk/nextjs": "^6.36.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -28,11 +28,11 @@
     "date-fns": "^4.1.0",
     "inngest": "^3.40.1",
     "lucide-react": "^0.525.0",
-    "next": "15.4.2",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "^19.2.1",
     "react-day-picker": "^9.8.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.60.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.1.0",
@@ -45,7 +45,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.4.2",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5"
   }
